--- a/assignment 4(1)/registration.html
+++ b/assignment 4(1)/registration.html
@@ -60,7 +60,7 @@
                     </label>
                 </div>
             </div>
-            <button id="submitBtn">Confirm</button>
+            <button id="submitBtn">Submit</button>
         </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
