--- a/assignment 4(1)/registration.html
+++ b/assignment 4(1)/registration.html
@@ -17,7 +17,7 @@
 <body  style="background-image: url('img/fullscreen/bg.jpg');">
         <header class="header">
             <div class="header__logo">
-                <a href="index.html"><img src="img/icons/logo.svg" alt="Logo"></a>
+              <img src="img/icons/logo.svg" alt="Logo">
             </div>
         </header>
         <div class="container">
