--- a/assignment 4(1)/subscriptions.html
+++ b/assignment 4(1)/subscriptions.html
@@ -18,7 +18,7 @@
                 <div class="header__big-container">
                     <div class="header__wrapper">
                         <div class="header__logo">
-                            <a href="index.htm"><img src="img/icons/logo.svg" alt="Logo" /></a>
+                            <a href="index.html"><img src="img/icons/logo.svg" alt="Logo" /></a>
                         </div>
                         <!-- === -->
                         <div class="header__menu menu">
