--- a/assignment 4(1)/index.html
+++ b/assignment 4(1)/index.html
@@ -17,6 +17,8 @@
 	<meta name="msapplication-TileColor" content="#444e5d">
 	<meta name="theme-color" content="#344348">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<script src="https://kit.fontawesome.com/8440c08c09.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
