--- a/assignment 4(1)/index.html
+++ b/assignment 4(1)/index.html
@@ -583,12 +583,19 @@
 					</div>
 					<div class="contacts__contacts-block">
 						<h3 class="contacts__title _title">Контакты</h3>
-						<div class="contacts__address">г. Астана, ул. Кайрата Рыскулбекова 4</div>
-						<div class="contacts__time">Ежедневно с 8:00 до 23:00</div>
-						<div class="contacts__tel">
-							<a href="tel:+77075789858" class="contacts__tel-1">+7 (707) 578 98 58,</a>
-							<a href="tel:+771723839090" class="contacts__tel-2">+7 (7172) 383 90 90</a>
-						</div>
+						<div class="location">
+    <i class="fa-sharp fa-regular fa-location-dot fa-xl location-icon" style="color: #f7931c;"></i>
+    <span>г. Астана, улица К.Рыскулбекова 4</span>
+</div>
+
+<div class="location">
+    <i class="fa-regular fa-clock fa-xl location-icon" style="color: #ff9300;"></i>
+    <span>Ежедневно с 8:00 до 23:00</span>
+</div>
+
+<div class="location">
+    <i class="fa-regular fa-phone fa-xl location-icon" style="color: #ff9300;"></i>+7 (707) 578 98 58
+</div>
 						<div class="contacts__social-title">Подписывайтесь на наши соц.сети</div>
 						<div class="contacts__social-line">
 							<a href="#" class="contacts__social-insta _social">
