--- a/assignment 4(1)/subscriptions.html
+++ b/assignment 4(1)/subscriptions.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="format-detection" content="telephone=no">
-        <link rel="stylesheet" href="css/style.min.css?_v=20221008113840">
+        <link rel="stylesheet" href="css/style.min.css">
         <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -18,25 +18,8 @@
                 <div class="header__big-container">
                     <div class="header__wrapper">
                         <div class="header__logo">
-                            <a href="index.html"><img src="img/icons/logo.svg" alt="Logo" /></a>
+                            <a href="index.htm"><img src="img/icons/logo.svg" alt="Logo" /></a>
                         </div>
-                        <!-- === -->
-                        <div class="header__menu menu">
-                            <nav class="menu__body">
-                                <ul class="menu__list">
-                                    <li class="menu__item"><a href="#" data-goto="#benefits" class="menu__link link">О нас</a></li>
-                                    <li class="menu__item"><a href="#" data-goto="#gallery" class="menu__link link">Галерея</a></li>
-                                    <li class="menu__item"><a href="subscriptions.html" class="menu__link link">Абонементы</a></li>
-                                    <li class="menu__item"><a href="#" data-goto="#trainers" class="menu__link link">Тренеры</a></li>
-                                    <li class="menu__item"><a href="#" data-goto="#contacts" class="menu__link link">Контакты</a></li>
-                                </ul>
-                            </nav>
-                        </div>
-                        <!-- === -->
-                        <a data-da=".menu__list,479.98,4" href="tel:+77172389090" class="header__tell-btn">+7 (7172) 38 90 90</a>
-                        <button type="button" class="menu__icon icon-menu"><span></span></button>
-                    </div>
-                </div>
             </header>
 <div id="subscriptions" class="subscriptions">
 
@@ -44,7 +27,7 @@
         <div class="subscriptions__container">
             <!-- Оболочка слайдера -->
             <div class="body-subscriptions__slider body-subscriptions__slider-top">
-                <h2 class="body-subscriptions__title _title">Абонементы</h2>
+                <h2 class="body-subscriptions__title _title">Subscriptions</h2>
                 <!-- Двигающееся часть слайдера -->
                 <div class="body-subscriptions__wrapper swiper-wrapper">
                     <!-- Слайд -->
@@ -53,31 +36,32 @@
                             <!-- todo ========== -->
                             <div class="trainings-item number-trainings">Кол-во занятий</div>
                             <!--=== -->
-                            <div class="trainings-item number-trainings-1 _font-weight-700">1 тренировка</div>
-                            <div class="trainings-item number-trainings-4 _font-weight-700"> 4 тренировки</div>
-                            <div class="trainings-item number-trainings-8 _font-weight-700">8 тренировок</div>
-                            <div class="trainings-item number-trainings-12 _font-weight-700">12 тренировок</div>
+                            <div class="trainings-item number-trainings-1 _font-weight-700">1 training</div>
+                            <div class="trainings-item number-trainings-4 _font-weight-700"> 4 trainings</div>
+                            <div class="trainings-item number-trainings-8 _font-weight-700">8 trainings</div>
+                            <div class="trainings-item number-trainings-12 _font-weight-700">12 trainings</div>
                             <!-- todo ========== -->
-                            <div class="trainings-item personal-trainings _font-weight-700">Персональный тренинг с инструктором</div>
+                            <div class="trainings-item personal-trainings _font-weight-700">Personal training with an instructor</div>
                             <!--=== -->
-                            <div class="trainings-item personal-trainings-prise-1">3900 тенге</div>
-                            <div class="trainings-item personal-trainings-prise-4">15000 тенге. (действителен в течении 3 недель)</div>
-                            <div class="trainings-item personal-trainings-prise-8">29000 тенге. (действителен в течении 6 недель)</div>
-                            <div class="trainings-item personal-trainings-prise-12">40000 тенге. (действителен в течении 10 недель)</div>
+                            <div class="trainings-item personal-trainings-prise-1">3900 tenge</div>
+                            <div class="trainings-item personal-trainings-prise-4">15000 tenge. (valid for 3 weeks)</div>
+                            <div class="trainings-item personal-trainings-prise-8">29000 tenge. (valid for 6 weeks)</div>
+                            <div class="trainings-item personal-trainings-prise-12">40000 tenge. (valid for 10 weeks)</div>
                             <!-- todo ========== -->
-                            <div class="trainings-item independent-trainings _font-weight-700">Самостоятельные тренировки в тренажерном зале</div>
+                            <div class="trainings-item independent-trainings _font-weight-700">
+                                Self-training in the gym</div>
                             <!--=== -->
-                            <div class="trainings-item independent-trainings-prise-1">1400 тенге</div>
+                            <div class="trainings-item independent-trainings-prise-1">1400 tenge</div>
                             <div class="trainings-item independent-trainings-prise-4">—</div>
-                            <div class="trainings-item independent-trainings-prise-8">8400 тенге. (действителен в течении 30 дней)</div>
-                            <div class="trainings-item independent-trainings-prise-12">11200 тенге. (действителен в течении 30 дней)</div>
+                            <div class="trainings-item independent-trainings-prise-8">8400 tenge. (valid for 30 days)</div>
+                            <div class="trainings-item independent-trainings-prise-12">11200 tenge. (valid for 30 days)</div>
                             <!-- todo ========== -->
-                            <div class="trainings-item group-trainings _font-weight-700">Зал групповых программ</div>
+                            <div class="trainings-item group-trainings _font-weight-700">Group program gym</div>
                             <!--=== -->
-                            <div class="trainings-item group-trainings-prise-1">1650 тенге</div>
+                            <div class="trainings-item group-trainings-prise-1">1650 tenge</div>
                             <div class="trainings-item group-trainings-prise-4">—</div>
-                            <div class="trainings-item group-trainings-prise-8">11200 тенге. (действителен в течении 30 дней</div>
-                            <div class="trainings-item group-trainings-prise-12">15000 тенге. (действителен в течении 45 дней)</div>
+                            <div class="trainings-item group-trainings-prise-8">11200 tenge. (valid for 30 days)</div>
+                            <div class="trainings-item group-trainings-prise-12">15000 tenge. (valid for 45 days)</div>
                         </div>
                     </div>
                 </div>
@@ -89,26 +73,28 @@
             <!-- ? -->
             <!-- Оболочка слайдера -->
             <div id="subscriptions-time" class="body-subscriptions__slider body-subscriptions__slider-bottom">
-                <h2 class="body-subscriptions-bottom__title _title">Абонемент по времени</h2>
+                <h2 class="body-subscriptions-bottom__title _title">Subscription by time</h2>
                 <!-- Двигающееся часть слайдера -->
                 <div class="body-subscriptions-bottom__wrapper swiper-wrapper">
                     <!-- Слайд -->
                     <div class="body-subscriptions-bottom__slide swiper-slide">
                         <div class="body-subscriptions-bottom__wrapper">
                             <!-- todo ========== -->
-                            <div class="trainings-item type-card">Тип карты</div>
+                            <div class="trainings-item type-card">Type of card</div>
                             <!--=== -->
-                            <div class="trainings-item type-card-12 _font-weight-700"> 12 месяцев</div>
-                            <div class="trainings-item type-card-6 _font-weight-700"> 6 месяцев</div>
-                            <div class="trainings-item type-card-3 _font-weight-700">3 месяца</div>
-                            <div class="trainings-item type-card-1 _font-weight-700">1 месяц</div>
+                            <div class="trainings-item type-card-12 _font-weight-700"> 12 months</div>
+                            <div class="trainings-item type-card-6 _font-weight-700"> 6 months</div>
+                            <div class="trainings-item type-card-3 _font-weight-700">3 months</div>
+                            <div class="trainings-item type-card-1 _font-weight-700">1 month</div>
                             <!-- todo ========== -->
-                            <div class="trainings-item personal-card _font-weight-700">Индивидуальная, полная без ограничения в посещении / 8:00 – 23:00</div>
+                            <div class="trainings-item personal-card _font-weight-700">Individual,
+                                full without limitation
+                                in a visit / 8:00 – 23:00</div>
                             <!--=== -->
-                            <div class="trainings-item personal-card-12">10000 тенге <br>(+200 мин. солярия)</div>
-                            <div class="trainings-item personal-card-6">70000 тенге</div>
-                            <div class="trainings-item personal-card-3">39000 тенге</div>
-                            <div class="trainings-item personal-card-1">14000 тенге</div>
+                            <div class="trainings-item personal-card-12">10000 tenge <br>(+200 min. solarium)</div>
+                            <div class="trainings-item personal-card-6">70000 tenge</div>
+                            <div class="trainings-item personal-card-3">39000 tenge</div>
+                            <div class="trainings-item personal-card-1">14000 tenge</div>
                             <!-- todo ========== -->
                             <div class="trainings-item independent-card _font-weight-700">Индивидуальная, дневная / 8:00 – 17:00</div>
                             <!--=== -->
@@ -142,45 +128,45 @@
     <!-- todo -->
     <div id="subscriptions-one" class="subscriptions__one-training training-one">
         <div class="subscriptions__container">
-            <h2 class="training-one__title _title">Разовые тренировки</h2>
+            <h2 class="training-one__title _title">One-time trainings</h2>
             <div class="training-one__cards">
                 <!-- === -->
                 <div class="training-one__card card-left">
-                    <a href="#" class="training-one__card-btn _btn-no-bg">Узнать<span class="_btn-line"></span></a>
-                    <div class="training-one__card-amount">1 тренировка</div>
+                    <a href="#" class="training-one__card-btn _btn-no-bg">To know<span class="_btn-line"></span></a>
+                    <div class="training-one__card-amount">1 training</div>
                     <div class="training-one__card-cena">1400₸</div>
                     <div class="training-one__card-icon">
                         <img src="img/icons/gym-time.svg" alt="иконка">
                     </div>
                     <div class="training-one__card-time">8:00 – 23:00</div>
                     <div class="training-one__card-title card-title-1">
-                        <h3>Самостоятельные тренировки в тренажерном зале</h3>
+                        <h3>Self-training in the gym</h3>
                     </div>
                 </div>
                 <!-- === -->
                 <div class="training-one__card card-center">
-                    <a href="#" class="training-one__card-btn _btn-no-bg">Узнать<span class="_btn-line"></span></a>
-                    <div class="training-one__card-amount">1 тренировка</div>
+                    <a href="#" class="training-one__card-btn _btn-no-bg">To know<span class="_btn-line"></span></a>
+                    <div class="training-one__card-amount">1 training</div>
                     <div class="training-one__card-cena">3900₸</div>
                     <div class="training-one__card-icon">
                         <img src="img/icons/gym-time.svg" alt="иконка">
                     </div>
                     <div class="training-one__card-time">8:00 – 23:00</div>
                     <div class="training-one__card-title card-title-2">
-                        <h3>Персональный тренинг с инструктором</h3>
+                        <h3>Personal training with an instructor</h3>
                     </div>
                 </div>
                 <!-- === -->
                 <div class="training-one__card card-right">
-                    <a href="#" class="training-one__card-btn _btn-no-bg">Узнать<span class="_btn-line"></span></a>
-                    <div class="training-one__card-amount">1 тренировка</div>
+                    <a href="#" class="training-one__card-btn _btn-no-bg">To know<span class="_btn-line"></span></a>
+                    <div class="training-one__card-amount">1 training</div>
                     <div class="training-one__card-cena">1600₸</div>
                     <div class="training-one__card-icon">
                         <img src="img/icons/gym-time.svg" alt="иконка">
                     </div>
-                    <div class="training-one__card-time">график занятий уточняйте у администратора</div>
+                    <div class="training-one__card-time">check the schedule of classes with the administrator</div>
                     <div class="training-one__card-title card-title-3">
-                        <h3>Зал групповых программ</h3>
+                        <h3>Group program gym</h3>
                     </div>
                 </div>
                 <!-- === -->
