--- a/assignment 4(1)/index.html
+++ b/assignment 4(1)/index.html
@@ -37,7 +37,13 @@
 								<li class="menu__item"><a href="#" data-goto="#gallery" class="menu__link link">Галерея</a></li>
 								<li class="menu__item"><a href="subscriptions.html" class="menu__link link">Абонементы</a></li>
 								<li class="menu__item"><a href="#" data-goto="#trainers" class="menu__link link">Тренеры</a></li>
-								<li class="menu__item"><a href="#" data-goto="#contacts" class="menu__link link">Контакты</a></li>
+								<div class="dropdown">
+									<button class="dropbtn">Contacts</button>
+									<div class="dropdown-content">
+									  <a href>Consultation</a>
+									  <a href>Location and Phone</a>
+									</div>
+								  </div>
 								<li class="menu__item"><a href="registration.html" class="menu__link link">Регистрация</a></li>
 							</ul>
 						</nav>
