--- a/assignment 4(1)/index.html
+++ b/assignment 4(1)/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru">
-
+<html>
 <head>
-	<title>Фитнес клуб Пантеон</title>
+	<title>Fitness club Panteon</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<!-- <style>body{opacity: 0;}</style> -->
 	<link rel="stylesheet" href="css/style.min.css?_v=20221008113840">
-	<!-- <link rel="shortcut icon" href="favicon.ico"> -->
-
 	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -17,10 +13,8 @@
 	<meta name="msapplication-TileColor" content="#444e5d">
 	<meta name="theme-color" content="#344348">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
 	<script src="https://kit.fontawesome.com/8440c08c09.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
 	<div class="wrapper">
 		<header class="header">
@@ -29,43 +23,34 @@
 					<div class="header__logo">
 						<img src="img/icons/logo.svg" alt="Logo" />
 					</div>
-					<!-- === -->
 					<div class="header__menu menu">
 						<nav class="menu__body">
 							<ul class="menu__list">
-								<li class="menu__item"><a href="#" data-goto="#benefits" class="menu__link link">О нас</a></li>
-								<li class="menu__item"><a href="#" data-goto="#gallery" class="menu__link link">Галерея</a></li>
-								<li class="menu__item"><a href="subscriptions.html" class="menu__link link">Абонементы</a></li>
-								<li class="menu__item"><a href="#" data-goto="#trainers" class="menu__link link">Тренеры</a></li>
-								<div class="dropdown">
-									<button class="dropbtn">Contacts</button>
-									<div class="dropdown-content">
-									  <a href>Consultation</a>
-									  <a href>Location and Phone</a>
-									</div>
-								  </div>
-								<li class="menu__item"><a href="registration.html" class="menu__link link">Регистрация</a></li>
+								<li class="menu__item"><a href="#benefits" data-goto="#benefits" class="menu__link link">About</a></li>
+								<li class="menu__item"><a href="#gallery" data-goto="#gallery" class="menu__link link">Gallery</a></li>
+								<li class="menu__item"><a href="subscriptions.html" class="menu__link link">Subscriptions</a></li>
+								<li class="menu__item"><a href="#trainers" data-goto="#trainers" class="menu__link link">Coaches</a></li>
+								<li class="menu__item"><a href="#contacts" data-goto="#contacts" class="menu__link link">Contacts</a></li>
+								<li class="menu__item"><a href="registration.html" class="menu__link link">Registration</a></li>
 							</ul>
 						</nav>
 					</div>
-					<!-- === -->
 					<a data-da=".menu__list,479.98,4" href="tel:77075789858" class="header__tell-btn">+7(707)578-98-58</a>
 					<button type="button" class="menu__icon icon-menu"><span></span></button>
 				</div>
 			</div>
 		</header>
 		<main class="page">
-			<!-- ? ======================================================================================================================================================== -->
 			<div data-fullscreen class="fullscreen">
 				<div class="fullscreen__container">
 					<div class="fullscreen__content">
-						<div class="fullscreen__title">Фитнес клуб Пантеон</div>
-						<div class="fullscreen__text">Лучший день чтобы тренироваться - сегодня</div>
-						<button data-goto="#questions" class="fullscreen__btn _btn">Получить
-							консультацию<span class="_btn-line"></span></button>
+						<div class="fullscreen__title">Fitness club Panteon</div>
+						<div class="fullscreen__text">
+							The best day to train is today</div>
+						<button data-goto="#questions" class="fullscreen__btn _btn">Get
+							consultation<span class="_btn-line"></span></button>
 					</div>
 				</div>
-				<!-- === -->
 				<div class="fullscreen__decor _decor-block">
 					<div class="_decor-block__top">
 						<div class="_decor-block__top-line"></div>
@@ -234,16 +219,15 @@
 						</div>
 						<div class="life-style__text-block">
 							<div class="life-style__text-block-wrapper">
-								<h2 class="life-style__text-block-title _title">Новый образ жизни</h2>
-								<div class="life-style__text-block-text">Став
-									частью нашей команды, вы сможете изменить
-									привычный ритм жизни и сделать каждый свой
-									день особенным, а формат наших тренировок
-									позволит вам раскрыть потенциал вашего тела
-									на 100%.</div>
+								<h2 class="life-style__text-block-title _title">New style of life</h2>
+								<div class="life-style__text-block-text">Becoming
+									part of our team, you will be able to change
+									the usual rhythm of life and make each his own
+									the day is special, and the format of our training
+									will allow you to unlock the potential of your body
+									by 100%.</div>
 								<a href="#" data-goto="#questions" class="life-style__text-block-btn
-                                    _btn-no-bg"><span class="_btn-line"></span>Получить
-									консультацию</a>
+                                    _btn-no-bg"><span class="_btn-line"></span>Get consultation</a>
 							</div>
 						</div>
 					</div>
@@ -256,39 +240,35 @@
 							<div class="benefits__item-icon">
 								<img src="img/icons/benefits/stationary-bike-1.svg" alt="Bike">
 							</div>
-							<div class="benefits__item-text">Полностью
-								укомплектованный зал</div>
+							<div class="benefits__item-text">Fully complected gym</div>
 						</div>
 						<div class="benefits__item">
 							<div class="benefits__item-icon">
 								<img src="img/icons/benefits/dumbbell-2.svg" alt="Dumbbell">
 							</div>
-							<div class="benefits__item-text">Профессиональное
-								оборудование</div>
+							<div class="benefits__item-text">Professional equipment</div>
 						</div>
 						<div class="benefits__item">
 							<div class="benefits__item-icon">
 								<img src="img/icons/benefits/location-3.svg" alt="Location">
 							</div>
-							<div class="benefits__item-text">Удобное
-								расположение в центре города</div>
+							<div class="benefits__item-text">Convenient
+								location in the city</div>
 						</div>
 						<div class="benefits__item">
 							<div class="benefits__item-icon">
 								<img src="img/icons/benefits/wallet-4.svg" alt="Wallet">
 							</div>
-							<div class="benefits__item-text">Доступная
-								стоимость занятий</div>
+							<div class="benefits__item-text">Affordable
+								the cost of classes</div>
 						</div>
 					</div>
 				</div>
 			</div>
-			<!-- ? ======================================================================================================================================================== -->
 			<div id="gallery" class="gallery">
 				<div class="gallery__container">
-					<h2 class="gallery__title _title">Галерея</h2>
+					<h2 class="gallery__title _title">Gallery</h2>
 					<div class="gallery__sliders-block">
-						<!-- ? -->
 						<div class="gallery__sider-top top-slider">
 							<!-- Оболочка слайдера -->
 							<div class="top-slider__slider swiper">
@@ -457,7 +437,7 @@
 				<div class="trainers__big-container">
 					<div class="trainers__wrapper">
 						<div class="trainers-title-column">
-							<h2 class="trainers__title _title">Тренеры </h2>
+							<h2 class="trainers__title _title">Coaches</h2>
 						</div>
 						<div class="trainers__slider-column trainers-slider">
 							<!-- Оболочка слайдера -->
@@ -470,11 +450,11 @@
 											<picture><source srcset="img/trainers/1.webp" type="image/webp"><img src="img/trainers/1.jpg" alt="Тренер"></picture>
 										</div>
 										<div class="trainers-slider__slide-text-block">
-											<div class="trainers-slider__slide-text-name">Илья Панченко</div>
+											<div class="trainers-slider__slide-text-name">Ilya Panchenko</div>
 											<div class="trainers-slider__slide-text-bio">
-												<p>Персональный тренер</p>
-												<p>Инструктор тренажерного зала</p>
-												<p>Опыт работы — 4 года</p>
+												<p>Personal coach</p>
+												<p>Instructor of gym</p>
+												<p>Job experience - 4 years</p>
 											</div>
 										</div>
 									</div>
@@ -484,10 +464,10 @@
 											<picture><source srcset="img/trainers/2.webp" type="image/webp"><img src="img/trainers/2.jpg" alt="Тренер"></picture>
 										</div>
 										<div class="trainers-slider__slide-text-block">
-											<div class="trainers-slider__slide-text-name">Екатерина Сосина-Нуньес</div>
+											<div class="trainers-slider__slide-text-name">Ekaterina Sosina</div>
 											<div class="trainers-slider__slide-text-bio">
-												<p>Фитнес-тренер</p>
-												<p>Опыт работы — 4 года</p>
+												<p>Fitness coach</p>
+												<p>Job experience - 4 years</p>
 											</div>
 										</div>
 									</div>
@@ -497,10 +477,10 @@
 											<picture><source srcset="img/trainers/3.webp" type="image/webp"><img src="img/trainers/3.jpg" alt="Тренер"></picture>
 										</div>
 										<div class="trainers-slider__slide-text-block">
-											<div class="trainers-slider__slide-text-name">Юлия Белова</div>
+											<div class="trainers-slider__slide-text-name">Iulia Belova</div>
 											<div class="trainers-slider__slide-text-bio">
-												<p>Фитнес-тренер</p>
-												<p>Опыт работы — 4 года</p>
+												<p>Fitness coach</p>
+												<p>Job experience - 4 years</p>
 											</div>
 										</div>
 									</div>
@@ -510,11 +490,11 @@
 											<picture><source srcset="img/trainers/4.webp" type="image/webp"><img src="img/trainers/4.webp" alt="Тренер"></picture>
 										</div>
 										<div class="trainers-slider__slide-text-block">
-											<div class="trainers-slider__slide-text-name">Михаил Алексеев</div>
+											<div class="trainers-slider__slide-text-name">Michael Aveev</div>
 											<div class="trainers-slider__slide-text-bio">
-												<p>Фитнес-тренер</p>
-												<p>Инструктор тренажерного зала</p>
-												<p>Опыт работы — 6 лет</p>
+												<p>Fitness coach</p>
+												<p>Instructor of gym</p>
+												<p>Job experience - 6 years</p>
 											</div>
 										</div>
 									</div>
@@ -524,10 +504,10 @@
 											<picture><source srcset="img/trainers/5.webp" type="image/webp"><img src="img/trainers/5.webp" alt="Тренер"></picture>
 										</div>
 										<div class="trainers-slider__slide-text-block">
-											<div class="trainers-slider__slide-text-name">Ксения Оганесян</div>
+											<div class="trainers-slider__slide-text-name">Ksenia Oganysian</div>
 											<div class="trainers-slider__slide-text-bio">
-												<p>Фитнес-тренер</p>
-												<p>Опыт работы — 4 года</p>
+												<p>Fitness coach</p>
+												<p>Job experience - 4 years</p>
 											</div>
 										</div>
 									</div>
@@ -554,28 +534,28 @@
 					<div class="questions__form-block">
 						<!-- === -->
 						<div class="questions__form-block-text">
-							<div class="questions__form-block-title">Остались вопросы?</div>
+							<div class="questions__form-block-title">Got questions?</div>
 							<div class="questions__form-block-subtitle">
-								Оставьте Ваш номер телефона <br> и мы <span>обязательно с Вами свяжемся</span>
+								Leave your phone number <br> and we <span>necessarily will contact you!</span>
 							</div>
 						</div>
 						<!-- ? === -->
 						<form class="questions__form-body" action="https://jsonplaceholder.typicode.com/posts" method="post" target="_blank">
 							<!--  -->
 							<label class="questions__form-label-name">
-								<span class="hidden">Введите имя</span>
+								<span class="hidden">Enter your name</span>
 								<input class="questions__form-input-name" type="text" name="Name" placeholder="Введите имя" required>
 							</label>
 							<!--  -->
 							<label class="questions__form-label-tel">
-								<span class="hidden">Введите телефон</span>
+								<span class="hidden">Enter your phone number</span>
 								<input class="questions__form-input-tel" type="tel" name="tel" placeholder="Введите телефон" required>
 							</label>
 							<!--  -->
-							<button type="submit" class="questions__form-button _btn-no-bg">Получить консультацию<span class="_btn-line"></span></button>
+							<button type="submit" class="questions__form-button _btn-no-bg">Get consultation<span class="_btn-line"></span></button>
 						</form>
 						<!-- ? === -->
-						<div class="questions__politics">Нажимая на кнопку вы соглашаетесь с политикой конфиденциальности</div>
+						<div class="questions__politics">By clicking on the button you agree to the privacy policy</div>
 						<!-- === -->
 					</div>
 				</div>
@@ -588,21 +568,14 @@
 						<img src="img/map/photo_5438644287685380121_y 1.png" alt="Карта">
 					</div>
 					<div class="contacts__contacts-block">
-						<h3 class="contacts__title _title">Контакты</h3>
-						<div class="location">
-    <i class="fa-sharp fa-regular fa-location-dot fa-xl location-icon" style="color: #f7931c;"></i>
-    <span>г. Астана, улица К.Рыскулбекова 4</span>
-</div>
-
-<div class="location">
-    <i class="fa-regular fa-clock fa-xl location-icon" style="color: #ff9300;"></i>
-    <span>Ежедневно с 8:00 до 23:00</span>
-</div>
-
-<div class="location">
-    <i class="fa-regular fa-phone fa-xl location-icon" style="color: #ff9300;"></i>+7 (707) 578 98 58
-</div>
-						<div class="contacts__social-title">Подписывайтесь на наши соц.сети</div>
+						<h3 class="contacts__title _title">Contacts</h3>
+						<div class="contacts__address">Astana city, Kairat Ryskulbekova 4 street</div>
+						<div class="contacts__time">Daily from 8:00 to 23:00</div>
+						<div class="contacts__tel">
+							<a href="tel:+77075789858" class="contacts__tel-1">+7 (707) 578 98 58,</a>
+							<a href="tel:+77172389090" class="contacts__tel-2">+7 (7172) 38 90 90</a>
+						</div>
+						<div class="contacts__social-title">Subscribe to our social media</div>
 						<div class="contacts__social-line">
 							<a href="#" class="contacts__social-insta _social">
 								<svg width="23" height="22" viewBox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -648,32 +621,32 @@
 							<img src="img/icons/logo.svg" alt="Лого">
 						</div>
 						<div class="footer__column-copy">
-							<p>© Все права защищены</p>
-							<p>Харьков Украина, 2013-2022</p>
+							<p>© All rights are covered</p>
+							<p>Kazakhstan, Astana, 2012-2023</p>
 						</div>
 					</div>
 					<!-- ===== -->
 					<div class="footer__colunm footer__colunm-center">
 						<div class="footer__colunm-center-left">
-							<p><a class="footer-menu-link" data-goto="#benefits" href="#">О нас</a></p>
-							<p><a class="footer-menu-link" data-goto="#gallery" href="#">Галерея</a></p>
-							<p><a class="footer-menu-link" data-goto="#subscriptions" href="#">Абонементы</a></p>
+							<p><a class="footer-menu-link" data-goto="#benefits" href="#benefits">About</a></p>
+							<p><a class="footer-menu-link" data-goto="#gallery" href="#gallery">Gallery</a></p>
+							<p><a class="footer-menu-link" data-goto="#subscriptions" href="subscriptions.html">Subscriptions</a></p>
 						</div>
 						<div class="footer__colunm-center-center">
-							<p><a class="footer-menu-link" data-goto="#trainers" href="#">Тренеры</a></p>
-							<p><a class="footer-menu-link" data-goto="#contacts" href="#">Контакты</a></p>
-							<p class="footer-tel-hidden"><a class="footer-menu-link" href="tel:30684161916"></a>+3 (068) 416-19-16</p>
+							<p><a class="footer-menu-link" data-goto="#trainers" href="#trainers">Coaches</a></p>
+							<p><a class="footer-menu-link" data-goto="#contacts" href="#contacts">Contacts</a></p>
+							<p class="footer-tel-hidden"><a class="footer-menu-link" href="tel:30684161916"></a>+7 (7172) 38 9090</p>
 						</div>
 						<div class="footer__colunm-center-right">
-							<p><a class="footer-menu-link" data-goto="#subscriptions-time" href="#">Абонемент по времени</a></p>
-							<p><a class="footer-menu-link" data-goto="#subscriptions-one" href="#">Разовые тренировки</a></p>
+							<p><a class="footer-menu-link" data-goto="#subscriptions-time" href="#">Subscriptions by time</a></p>
+							<p><a class="footer-menu-link" data-goto="#subscriptions-one" href="#">One-time trainings</a></p>
 						</div>
 					</div>
 					<!-- ===== -->
 					<div data-da=".footer__column-left,479.98,1" class="footer__colunm footer__column-right">
 						<div class="footer__left-columns">
 							<div class="footer__left-column-social">
-								<p>Наши соц.сети</p>
+								<p>Our social media</p>
 								<div class="footer__left-column-social-line">
 									<a href="#" class="footer__social-insta _social">
 										<svg width="23" height="22" viewBox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -703,13 +676,13 @@
 							</div>
 							<!--  -->
 							<div class="footer__left-columns-contacts">
-								<p>г. Астана, Казахстан <span>ул. Кайрата Рыскулбекова 4</span></p>
-								<p>Ежедневно <span>с 8:00 до 23:00</span></p>
+								<p>Astana city, Kazakhstan <span>Kairat Ryskulbekova 4 street</span></p>
+								<p>Daily <span>с 8:00 до 23:00</span></p>
 								<p>
 									<a href="tel:77075789858">+7 (707) 578 98 58,</a>
-									<a href="tel:771723839090"> +7 (7172) 383 90 90</a>
+									<a href="tel:771723839090"> +7 (7172) 38 90 90</a>
 								</p>
-								<div><a href="#">Политика конфиденциальности</a></div>
+								<div><a href="#">Privacy Policy</a></div>
 							</div>
 							<!--  -->
 						</div>
@@ -719,16 +692,6 @@
 			</div>
 		</footer>
 	</div>
-	<!-- <div id="popup" aria-hidden="true" class="popup">
-	<div class="popup__wrapper">
-		<div class="popup__content">
-			<button data-close type="button" class="popup__close">Закрыть</button>
-			<div class="popup__text">
-				Text
-			</div>
-		</div>
-	</div>
-</div> -->
 	<script src="js/app.min.js?_v=20221008113840"></script>
 </body>
 
