--- a/assignment 4(1)/index.html
+++ b/assignment 4(1)/index.html
@@ -569,13 +569,20 @@
 					</div>
 					<div class="contacts__contacts-block">
 						<h3 class="contacts__title _title">Contacts</h3>
-						<div class="contacts__address">Astana city, Kairat Ryskulbekova 4 street</div>
-						<div class="contacts__time">Daily from 8:00 to 23:00</div>
-						<div class="contacts__tel">
-							<a href="tel:+77075789858" class="contacts__tel-1">+7 (707) 578 98 58,</a>
-							<a href="tel:+77172389090" class="contacts__tel-2">+7 (7172) 38 90 90</a>
-						</div>
-						<div class="contacts__social-title">Subscribe to our social media</div>
+						<div class="location">
+    <i class="fa-sharp fa-regular fa-location-dot fa-xl location-icon" style="color: #f7931c;"></i>
+    <span>Astana city, Kairat Ryskulbekova 4 street</span>
+</div>
+
+<div class="location">
+    <i class="fa-regular fa-clock fa-xl location-icon" style="color: #ff9300;"></i>
+    <span>Daily from 8:00 to 23:00</span>
+</div>
+
+<div class="location">
+    <i class="fa-regular fa-phone fa-xl location-icon" style="color: #ff9300;"></i>+7 (707) 578 98 58
+</div>
+<div class="contacts__social-title">Subscribe to our social media</div>
 						<div class="contacts__social-line">
 							<a href="#" class="contacts__social-insta _social">
 								<svg width="23" height="22" viewBox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
