--- a/assignment 4(1)/subscriptions.html
+++ b/assignment 4(1)/subscriptions.html
@@ -34,7 +34,7 @@
                     <div class="body-subscriptions__slide swiper-slide">
                         <div class="body-subscriptions__wrapper">
                             <!-- todo ========== -->
-                            <div class="trainings-item number-trainings">Кол-во занятий</div>
+                            <div class="trainings-item number-trainings">Amount</div>
                             <!--=== -->
                             <div class="trainings-item number-trainings-1 _font-weight-700">1 training</div>
                             <div class="trainings-item number-trainings-4 _font-weight-700"> 4 trainings</div>
