--- a/assignment 4(1)/subscriptions.html
+++ b/assignment 4(1)/subscriptions.html
@@ -96,7 +96,7 @@
                             <div class="trainings-item personal-card-3">39000 tenge</div>
                             <div class="trainings-item personal-card-1">14000 tenge</div>
                             <!-- todo ========== -->
-                            <div class="trainings-item independent-card _font-weight-700">Индивидуальная, дневная / 8:00 – 17:00</div>
+                            <div class="trainings-item independent-card _font-weight-700">Individual,daily / 8:00 – 17:00</div>
                             <!--=== -->
                             <div class="trainings-item independent-card-12">—</div>
                             <div class="trainings-item independent-card-6">50000 тенге</div>
@@ -109,7 +109,7 @@
                 <div class="subscriptions-swiper-scrollbar-wrapper _scrollbar-wrapper">
                     <div class="subscriptions-swiper-scrollbar-bottom _scrollbar"></div>
                 </div>
-                <!-- <div class="subscriptions-swiper-scrollbar-bottom _scrollbar"></div> -->
+                <div class="subscriptions-swiper-scrollbar-bottom _scrollbar"></div>
             </div>
         </div>
         <!-- ? Decor -->
