--- a/assignment 4(1)/index.html
+++ b/assignment 4(1)/index.html
@@ -30,7 +30,13 @@
 								<li class="menu__item"><a href="#gallery" data-goto="#gallery" class="menu__link link">Gallery</a></li>
 								<li class="menu__item"><a href="subscriptions.html" class="menu__link link">Subscriptions</a></li>
 								<li class="menu__item"><a href="#trainers" data-goto="#trainers" class="menu__link link">Coaches</a></li>
-								<li class="menu__item"><a href="#contacts" data-goto="#contacts" class="menu__link link">Contacts</a></li>
+								<div class="dropdown"> 
+         <button class="dropbtn">Contacts</button> 
+         <div class="dropdown-content"> 
+           <a href="#questions">Consultation</a> 
+           <a href="#contacts">Location and Phone</a> 
+         </div> 
+          </div>
 								<li class="menu__item"><a href="registration.html" class="menu__link link">Registration</a></li>
 							</ul>
 						</nav>
